set up github pages

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <span class="line">Loading profile...</span>
                         <span class="line">Name: Adriel Rivera</span>
                         <span class="line">Role: Cybersecurity Professional</span>
-                        <span class="line">Specialization: Penetration Testing</span>
+                        <span class="line">Specialisation: Penetration Testing</span>
                         <span class="line">Status: Ready for new challenges</span>
                         <span class="cursor">█</span>
                     </div>
