added matrix background, animations, and improved layout

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adriel Rivera | Cybersecurity Professional</title>
+    <title>Portfolio | Cybersecurity Professional</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
@@ -13,12 +13,11 @@
     
     <header class="glitch-header">
         <nav>
-            <div class="logo">AR</div>
+            <div class="logo">Adriel</div>
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#experience">Experience</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -37,12 +36,12 @@
                 </div>
                 <div class="terminal-content">
                     <div class="typing-text">
-                        <span class="line">Loading profile...</span>
+                        <span class="line">Initializing profile...</span>
                         <span class="line">Name: Adriel Rivera</span>
-                        <span class="line">Role: Cybersecurity Professional</span>
-                        <span class="line">Specialisation: Penetration Testing</span>
-                        <span class="line">Status: Ready for new challenges</span>
-                        <span class="cursor">█</span>
+                        <span class="line">School: School of Science & Technology</span>
+                        <span class="line">Goal: Cybersecurity Professional</span>
+                        <span class="line">Status: Ready for new challenges!</span>
+
                     </div>
                 </div>
             </div>
@@ -51,27 +50,84 @@
         <section id="about" class="section-dark">
             <h2 class="glitch-text">About Me</h2>
             <div class="about-content">
-                <p>I am an aspiring cybersecurity professional with a strong focus on penetration testing. My journey is driven by curiosity and a commitment to making digital spaces more secure. With experience in ethical hacking, bug bounty hunting, and various development skills, I bring a comprehensive approach to cybersecurity challenges.</p>
+                <div class="about-section">
+                    <h3>Education</h3>
+                    <p>I am a dedicated secondary school student at the School of Science and Technology (SST), taking the Engineering+ subject combination, which includes applied subjects in Computing+ and Electronics. As part of the Integrated Diploma Programme (IDP), a through-train pathway to Ngee Ann Polytechnic, I am working towards joining the Cybersecurity & Digital Forensics course at the School of ICT.</p>
+                </div>
+
+                <div class="about-section">
+                    <h3>Aspiration</h3>
+                    <p>I am an aspiring Cybersecurity professional, specifically in the field of penetration testing. Driven by curiosity and a passion for problem-solving, I am eager to contribute to the ever-evolving landscape of digital security. My commitment to cybersecurity is reflected in my continuous pursuit of knowledge and practical skills in this field.</p>
+                </div>
+
+                <div class="about-section">
+                    <h3>Plans</h3>
+                    <p>Currently preparing for the eJPT (eLearnSecurity Junior Penetration Tester) certification. My future goals include obtaining the eCPPT (eLearnSecurity Certified Professional Penetration Tester) and OSCP (Offensive Security Certified Professional) certifications to further my expertise in offensive security techniques.</p>
+                </div>
             </div>
         </section>
 
         <section id="skills" class="section-dark">
-            <h2 class="glitch-text">Core Competencies</h2>
+            <h2 class="glitch-text">Skills & Competencies</h2>
             <div class="skills-grid">
                 <div class="skill-card">
-                    <i class="fas fa-bug"></i>
-                    <h3>Ethical Hacking</h3>
-                    <p>Bug bounty hunting and systematic vulnerability assessment</p>
-                </div>
-                <div class="skill-card">
                     <i class="fas fa-code"></i>
-                    <h3>Development</h3>
-                    <p>Web, App, and Game Development</p>
+                    <h3>placeholder</h3>
+                    <p>placeholder</p>
                 </div>
                 <div class="skill-card">
-                    <i class="fas fa-shield-alt"></i>
-                    <h3>Security Testing</h3>
-                    <p>Penetration testing and security auditing</p>
+                    <i class="fas fa-server"></i>
+                    <h3>placeholder</h3>
+                    <p>placeholder</p>
+                </div>
+                <div class="skill-card">
+                    <i class="fas fa-database"></i>
+                    <h3>placeholder</h3>
+                    <p>placeholder</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="projects" class="section-dark">
+            <h2 class="glitch-text">Projects</h2>
+            <div class="skills-grid">
+                <div class="skill-card">
+                    <i class="fas fa-project-diagram"></i>
+                    <h3>[Project 1]</h3>
+                    <p>[placeholder]</p>
+                </div>
+                <div class="skill-card">
+                    <i class="fas fa-code-branch"></i>
+                    <h3>[Project 2]</h3>
+                    <p>[placeholder]</p>
+                </div>
+                <div class="skill-card">
+                    <i class="fas fa-terminal"></i>
+                    <h3>[Project 3]</h3>
+                    <p>[placeholder]</p>
+                </div>
+            </div>
+        </section>
+
+        
+
+        <section id="contact" class="section-dark">
+            <h2 class="glitch-text">Contact</h2>
+            <div class="skills-grid">
+                <div class="skill-card">
+                    <i class="fas fa-envelope"></i>
+                    <h3>Email</h3>
+                    <p>adrielrivera103@gmail.com</p>
+                </div>
+                <div class="skill-card">
+                    <i class="fab fa-linkedin"></i>
+                    <h3>LinkedIn</h3>
+                    <p>linkedin.com/in/adriel-rivera/</p>
+                </div>
+                <div class="skill-card">
+                    <i class="fab fa-github"></i>
+                    <h3>GitHub</h3>
+                    <p>github.com/adrielrivera</p>
                 </div>
             </div>
         </section>
