changed some content

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
                 <div class="about-section">
                     <h3>Plans</h3>
-                    <p>Currently preparing for the eJPT (eLearnSecurity Junior Penetration Tester) certification. My future goals include obtaining the eCPPT (eLearnSecurity Certified Professional Penetration Tester) and OSCP (Offensive Security Certified Professional) certifications to further my expertise in offensive security techniques.</p>
+                    <p>I have completed the Cisco Cybersecurity Essentials Certification as well as the Google Professional Cybersecurity Certification, and I am currently taking the eJPT (eLearnSecurity Junior Penetration Tester) certification. My future goals include obtaining the eCPPT (eLearnSecurity Certified Professional Penetration Tester) and OSCP (Offensive Security Certified Professional) certifications to further my expertise in offensive security techniques.</p>
                 </div>
             </div>
         </section>
