added photo of myself

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
     <main>
         <section id="hero" class="terminal-section">
+            <img src="adriel.jpeg" alt="Adriel Rivera" class="hero-image">
             <div class="terminal">
                 <div class="terminal-header">
                     <div class="terminal-buttons">
