changed navigation to sidebar

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <div class="matrix-bg"></div>
     
-    <header class="glitch-header">
+    <div class="sidebar">
+        <div class="logo">Adriel</div>
         <nav>
-            <div class="logo">Adriel</div>
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
@@ -21,9 +21,23 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
-    </header>
+        <div class="sidebar-footer">
+            <a href="https://github.com/adrielrivera" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://linkedin.com/in/adriel-rivera" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="mailto:adrielrivera103@gmail.com"><i class="fas fa-envelope"></i></a>
+        </div>
+    </div>
+    
+    <div class="mobile-nav">
+        <div class="logo">Adriel</div>
+        <div class="hamburger-menu">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+        </div>
+    </div>
 
-    <main>
+    <main class="main-content">
         <section id="hero" class="terminal-section">
             <img src="adriel.jpeg" alt="Adriel Rivera" class="hero-image">
             <div class="terminal">
