--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio | Cybersecurity Professional</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <base href="./">
 </head>
 <body>
     <div class="matrix-bg"></div>
@@ -39,7 +40,7 @@
 
     <main class="main-content">
         <section id="hero" class="terminal-section">
-            <img src="adriel.jpeg" alt="Adriel Rivera" class="hero-image">
+            <img src="./adriel.jpeg" alt="Adriel Rivera" class="hero-image">
             <div class="terminal">
                 <div class="terminal-header">
                     <div class="terminal-buttons">
@@ -148,6 +149,6 @@
         </section>
     </main>
 
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
