changed sidebar sections

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
-                <li><a href="#skills">Skills</a></li>
+                <li><a href="#certifications">Certifications</a></li>
+                <li><a href="#competitions">Competitions</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
         <div class="sidebar-footer">
@@ -85,23 +85,44 @@
             </div>
         </section>
 
-        <section id="skills" class="section-dark">
-            <h2 class="glitch-text">Skills & Competencies</h2>
+        <section id="certifications" class="section-dark">
+            <h2 class="glitch-text">Certifications</h2>
             <div class="skills-grid">
                 <div class="skill-card">
-                    <i class="fas fa-code"></i>
-                    <h3>placeholder</h3>
-                    <p>placeholder</p>
+                    <i class="fas fa-certificate"></i>
+                    <h3>Google Cybersecurity Professional</h3>
+                    <p>Completed Google's comprehensive cybersecurity program covering security frameworks, network security, Python, Linux, SQL, and security operations.</p>
                 </div>
                 <div class="skill-card">
-                    <i class="fas fa-server"></i>
-                    <h3>placeholder</h3>
-                    <p>placeholder</p>
+                    <i class="fas fa-shield-alt"></i>
+                    <h3>Cisco Cybersecurity Essentials</h3>
+                    <p>Gained foundational knowledge in cybersecurity principles, network security concepts, and threat detection techniques.</p>
                 </div>
                 <div class="skill-card">
-                    <i class="fas fa-database"></i>
-                    <h3>placeholder</h3>
-                    <p>placeholder</p>
+                    <i class="fas fa-user-secret"></i>
+                    <h3>eJPT (In Progress)</h3>
+                    <p>Currently pursuing the eLearnSecurity Junior Penetration Tester certification to develop practical penetration testing skills.</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="competitions" class="section-dark">
+            <h2 class="glitch-text">Competitions</h2>
+            <div class="skills-grid">
+                <div class="skill-card">
+                    <i class="fas fa-flag"></i>
+                    <h3>Cyber Defenders Discovery Camp</h3>
+                    <p>Participated in DSTA's cybersecurity competition, solving challenges in cryptography, forensics, and web exploitation.</p>
+                </div>
+                <div class="skill-card">
+                    <i class="fas fa-laptop-code"></i>
+                    <h3>Cyber Youth Singapore CTF</h3>
+                    <p>Competed in Capture The Flag challenges focusing on network security, reverse engineering, and cryptography.</p>
+                </div>
+                <div class="skill-card">
+                    <i class="fas fa-trophy"></i>
+                    <h3>Hack-A-Sat</h3>
+                    <p>Participated in space security challenges, working on satellite communications security and related cybersecurity problems.</p>
                 </div>
             </div>
         </section>
@@ -111,41 +132,18 @@
             <div class="skills-grid">
                 <div class="skill-card">
                     <i class="fas fa-project-diagram"></i>
-                    <h3>[Project 1]</h3>
-                    <p>[placeholder]</p>
+                    <h3>Network Vulnerability Scanner</h3>
+                    <p>Developed a Python-based tool to scan networks for common vulnerabilities and misconfigurations, generating detailed reports.</p>
                 </div>
                 <div class="skill-card">
                     <i class="fas fa-code-branch"></i>
-                    <h3>[Project 2]</h3>
-                    <p>[placeholder]</p>
+                    <h3>Secure File Encryption Tool</h3>
+                    <p>Created a file encryption application using AES-256 encryption to securely store and transfer sensitive documents.</p>
                 </div>
                 <div class="skill-card">
                     <i class="fas fa-terminal"></i>
-                    <h3>[Project 3]</h3>
-                    <p>[placeholder]</p>
-                </div>
-            </div>
-        </section>
-
-        
-
-        <section id="contact" class="section-dark">
-            <h2 class="glitch-text">Contact</h2>
-            <div class="skills-grid">
-                <div class="skill-card">
-                    <i class="fas fa-envelope"></i>
-                    <h3>Email</h3>
-                    <p>adrielrivera103@gmail.com</p>
-                </div>
-                <div class="skill-card">
-                    <i class="fab fa-linkedin"></i>
-                    <h3>LinkedIn</h3>
-                    <p>linkedin.com/in/adriel-rivera/</p>
-                </div>
-                <div class="skill-card">
-                    <i class="fab fa-github"></i>
-                    <h3>GitHub</h3>
-                    <p>github.com/adrielrivera</p>
+                    <h3>CTF Challenge Platform</h3>
+                    <p>Built a web platform to host and manage Capture The Flag challenges for cybersecurity training and competitions.</p>
                 </div>
             </div>
         </section>
