--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="matrix-bg"></div>
     
-    <div class="sidebar">
+    <!-- <div class="sidebar">
         <div class="logo">Adriel</div>
         <nav>
             <ul>
@@ -29,16 +29,28 @@
             <a href="https://linkedin.com/in/adriel-rivera" target="_blank"><i class="fab fa-linkedin"></i></a>
             <a href="mailto:adrielrivera103@gmail.com"><i class="fas fa-envelope"></i></a>
         </div>
-    </div>
+    </div> -->
     
-    <div class="mobile-nav">
-        <div class="logo">Adriel</div>
+    <nav class="top-navbar">
+        <div class="nav-logo">Adriel</div>
+        <ul class="nav-links">
+            <li><a href="index.html" class="nav-button">Home</a></li>
+            <li><a href="about.html" class="nav-button">About</a></li>
+            <li><a href="certifications.html" class="nav-button">Certifications</a></li>
+            <li><a href="competitions.html" class="nav-button">Competitions</a></li>
+            <li><a href="projects.html" class="nav-button">Projects</a></li>
+        </ul>
+        <div class="nav-social-links">
+            <a href="https://github.com/adrielrivera" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://linkedin.com/in/adriel-rivera" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="mailto:adrielrivera103@gmail.com"><i class="fas fa-envelope"></i></a>
+        </div>
         <div class="hamburger-menu">
             <div class="bar"></div>
             <div class="bar"></div>
             <div class="bar"></div>
         </div>
-    </div>
+    </nav>
 
     <main class="main-content">
         <section id="hero" class="terminal-section">
@@ -54,7 +66,7 @@
                 </div>
                 <div class="terminal-content">
                     <div class="typing-text">
-                        <span class="line">Initializing profile...</span>
+                        <span class="line">Initialising profile...</span>
                         <span class="line">Name: Adriel Rivera</span>
                         <span class="line">School: School of Science & Technology</span>
                         <span class="line">Goal: Cybersecurity Professional</span>
@@ -65,6 +77,8 @@
             </div>
         </section>
 
+        <!-- Sections below will be removed as they are now on separate pages -->
+        <!-- 
         <section id="about" class="section-dark">
             <h2 class="glitch-text">About Me</h2>
             <div class="about-content">
@@ -147,6 +161,7 @@
                 </div>
             </div>
         </section>
+        -->
     </main>
 
     <script src="./script.js"></script>
