--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="nav-logo">Adriel</div>
         <ul class="nav-links">
             <li><a href="index.html" class="nav-button">Home</a></li>
-            <li><a href="about.html" class="nav-button">About</a></li>
+            <!-- <li><a href="#about" class="nav-button">About</a></li> -->
             <li><a href="certifications.html" class="nav-button">Certifications</a></li>
             <li><a href="competitions.html" class="nav-button">Competitions</a></li>
             <li><a href="projects.html" class="nav-button">Projects</a></li>
@@ -74,6 +74,17 @@
 
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <section id="about" class="section-dark about-section-on-home">
+            <h2 class="glitch-text">About Me</h2>
+            <div class="about-narrative">
+                <p>As a Secondary 4 student at the School of Science and Technology, I have found myself constantly drawn to the world of cybersecurity. What began as a curiosity about how systems work has grown into a passion for digital defense and ethical hacking. I am excited by the prospect of channeling this passion into the Cybersecurity & Digital Forensics course at Ngee Ann Polytechnic, a programme that aligns perfectly with my interests and future goals.</p>
+                
+                <p>My journey has been marked by a commitment to hands-on learning and resilience. I have dedicated time to setting up my own penetration testing lab and teaching myself to use industry-standard tools like Burp Suite, Wireshark, and Kali Linux, often through self-study and late-night debugging sessions. These experiences have taught me to push through setbacks and stay adaptable – traits I believe are crucial in the dynamic field of cybersecurity.</p>
+                
+                <p>Through a diploma in Cybersecurity & Digital Forensics, I hope to refine both my technical and investigative skills, collaborate with peers who share my passion, and prepare for a future career as a penetration tester. My aim is to help protect systems and people from evolving cyber threats, and I am confident that with my background, drive, and mindset, I can contribute meaningfully to this field.</p>
             </div>
         </section>
 
