--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
         <div class="nav-logo">Adriel</div>
         <ul class="nav-links">
             <li><a href="index.html" class="nav-button">Home</a></li>
-            <li><a href="about.html" class="nav-button">About</a></li>
+            <!-- <li><a href="index.html#about" class="nav-button">About</a></li> -->
             <li><a href="certifications.html" class="nav-button">Certifications</a></li>
             <li><a href="competitions.html" class="nav-button">Competitions</a></li>
             <li><a href="projects.html" class="nav-button">Projects</a></li>
