--- a/projects.html
+++ b/projects.html
@@ -44,11 +44,13 @@
                     <h3>Automated OSINT Tool</h3>
                     <p>Developed an automated tool for Open Source Intelligence gathering.</p>
                 </div>
-                <div class="skill-card">
-                    <i class="fas fa-bug"></i>
-                    <h3>Malware Simulator</h3>
-                    <p>Built a simulator to study and understand malware behavior in a controlled environment.</p>
-                </div>
+                <a href="ransomware-simulator.html" class="skill-card-link">
+                    <div class="skill-card">
+                        <i class="fas fa-bug"></i>
+                        <h3>Ransomware Simulator</h3>
+                        <p>Built a simulator to study and understand ransomware behaviour in a controlled environment.</p>
+                    </div>
+                </a>
                 <div class="skill-card">
                     <i class="fas fa-user-secret"></i>
                     <h3>Custom Remote Access Trojan (RAT)</h3>
