added honeypot details

--- a/competitions.html
+++ b/competitions.html
@@ -50,9 +50,24 @@
                     <p>My team achieved fourth place in the national Seibersecc 2024 competition.</p>
                 </div>
                 <div class="skill-card">
+                    <i class="fas fa-medal"></i>
+                    <h3>greyCTF</h3>
+                    <p>Achieved top 15% placement in the greyCTF cybersecurity competition, demonstrating strong problem-solving skills across multiple challenge categories.</p>
+                </div>
+                <div class="skill-card">
+                    <i class="fas fa-star"></i>
+                    <h3>SSMCTF</h3>
+                    <p>Secured top 13 position in the SSMCTF competition, showcasing expertise in various cybersecurity domains and capture-the-flag challenges.</p>
+                </div>
+                <div class="skill-card">
                     <i class="fas fa-brain"></i>
-                    <h3>Programming & Computational Thinking Challenge (PCTC)</h3>
-                    <p>Achieved distinctions in both the 2024 and 2025 editions of the PCTC.</p>
+                    <h3>Programming & Computational Thinking Challenge (PCTC) 2024</h3>
+                    <p>Achieved distinction in the 2024 Programming & Computational Thinking Challenge, demonstrating strong algorithmic and problem-solving capabilities.</p>
+                </div>
+                <div class="skill-card">
+                    <i class="fas fa-lightbulb"></i>
+                    <h3>Programming & Computational Thinking Challenge (PCTC) 2025</h3>
+                    <p>Achieved distinction in the 2025 Programming & Computational Thinking Challenge, continuing to excel in computational thinking and programming skills.</p>
                 </div>
             </div>
         </section>
