--- a/projects.html
+++ b/projects.html
@@ -56,11 +56,13 @@
                     <h3>Custom Remote Access Trojan (RAT)</h3>
                     <p>Created a custom Remote Access Trojan for educational purposes in understanding system exploitation and control.</p>
                 </div>
-                <div class="skill-card">
-                    <i class="fas fa-shield-virus"></i>
-                    <h3>Honeypot System</h3>
-                    <p>Designed and deployed a honeypot to detect and analyze intrusion attempts.</p>
-                </div>
+                <a href="honeypot-system.html" class="skill-card-link">
+                    <div class="skill-card">
+                        <i class="fas fa-shield-virus"></i>
+                        <h3>Honeypot System</h3>
+                        <p>Designed and deployed a honeypot to detect and analyse intrusion attempts.</p>
+                    </div>
+                </a>
             </div>
         </section>
     </main>
