improved Home section

--- a/projects.html
+++ b/projects.html
@@ -72,14 +72,14 @@
                 </div>
             </div>
 
-            <!-- Additional Projects (Non-clickable) -->
+            <!-- More Projects (Non-clickable) -->
             <div class="additional-projects-section">
-                <h3 class="section-subtitle">Additional Projects</h3>
+                <h3 class="section-subtitle">More Projects</h3>
                 <div class="skills-grid">
                     <div class="skill-card">
                         <i class="fas fa-utensils"></i>
                         <h3>i-Makan App</h3>
-                        <p>Mobile application for food discovery and restaurant recommendations with user reviews and location-based services.</p>
+                        <p>Mobile application developed for Lions Befrienders organisation to recommend and organise healthy meal plans for elderly based on their age, specific needs, and chronic diseases.</p>
                     </div>
                     <div class="skill-card">
                         <i class="fas fa-calendar-check"></i>
@@ -87,9 +87,9 @@
                         <p>Restaurant reservation system with real-time booking management and integrated payment processing capabilities.</p>
                     </div>
                     <div class="skill-card">
-                        <i class="fas fa-industry"></i>
+                        <i class="fas fa-hammer"></i>
                         <h3>SICK Capstone Project</h3>
-                        <p>Industrial automation project focusing on sensor integration and data analytics for manufacturing process optimization.</p>
+                        <p>Capstone project collaboration with SICK company utilizing SICK sensors to develop a high striker hammer arcade machine with precision measurement capabilities.</p>
                     </div>
                 </div>
             </div>
