adding hovering for certifications

--- a/certifications.html
+++ b/certifications.html
@@ -38,21 +38,41 @@
     <main class="main-content">
         <section id="certifications" class="section-dark">
             <h2 class="glitch-text">Certifications</h2>
-            <div class="skills-grid">
-                <div class="skill-card">
+            <div style="display: flex; justify-content: center; width: 100%;">
+                <div class="section-hover-indicator">
+                    <i class="fas fa-hand-pointer"></i>
+                    <span>Hover over the certification cards below!</span>
+                </div>
+            </div>
+            <div class="certifications-grid">
+                <div class="skill-card google-cert">
                     <i class="fas fa-certificate"></i>
                     <h3>Google Cybersecurity Professional</h3>
                     <p>Completed Google's comprehensive cybersecurity programme, deepening my understanding of network defense, threat analysis, and digital forensics.</p>
                 </div>
-                <div class="skill-card">
+                <div class="skill-card cisco-cert" data-hover-image="images/cisco_ess.png">
                     <i class="fas fa-shield-alt"></i>
-                    <h3>Cybersecurity Essentials</h3>
-                    <p>Completed the Cybersecurity Essentials Certification, which deepened my understanding of key cybersecurity principles.</p>
+                    <h3>Cisco Cybersecurity Essentials</h3>
+                    <p>Completed the Cisco Cybersecurity Essentials Certification, which deepened my understanding of key cybersecurity principles.</p>
+                    <div class="hover-image-popup">
+                        <img src="images/cisco_ess.png" alt="Cisco Cybersecurity Essentials Certificate">
+                    </div>
                 </div>
-                <div class="skill-card">
+                <div class="skill-card cs0-cert" data-hover-image="images/cs0.png">
                     <i class="fas fa-laptop-code"></i>
-                    <h3>NUS School of Computing CS0 & CS1</h3>
-                    <p>Earned proficiency certificates in CS0 and CS1, strengthening computing fundamentals.</p>
+                    <h3>NUS School of Computing CS0</h3>
+                    <p>Earned proficiency certificate in CS0, establishing foundational programming and computational thinking skills.</p>
+                    <div class="hover-image-popup">
+                        <img src="images/cs0.png" alt="NUS CS0 Certificate">
+                    </div>
+                </div>
+                <div class="skill-card cs1-cert" data-hover-image="images/cs1.png">
+                    <i class="fas fa-code-branch"></i>
+                    <h3>NUS School of Computing CS1</h3>
+                    <p>Earned proficiency certificate in CS1, advancing algorithmic problem-solving and programming competencies.</p>
+                    <div class="hover-image-popup">
+                        <img src="images/cs1.png" alt="NUS CS1 Certificate">
+                    </div>
                 </div>
             </div>
         </section>
