--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <li><a href="index.html" class="nav-button">Home</a></li>
             <!-- <li><a href="#about" class="nav-button">About</a></li> -->
             <li><a href="certifications.html" class="nav-button">Certifications</a></li>
+            <li><a href="leadership.html" class="nav-button">Leadership</a></li>
             <li><a href="competitions.html" class="nav-button">Competitions</a></li>
             <li><a href="projects.html" class="nav-button">Projects</a></li>
         </ul>
