added more projects

--- a/projects.html
+++ b/projects.html
@@ -78,6 +78,21 @@
                 <h3 class="section-subtitle">More Projects</h3>
                 <div class="skills-grid">
                     <div class="skill-card">
+                        <i class="fas fa-robot"></i>
+                        <h3>IDP Integrated Design Challenge</h3>
+                        <p>Built a robot capable of line tracing and picking up objects. Trained an AI model to detect target objects to be collected using computer vision techniques.</p>
+                    </div>
+                    <div class="skill-card">
+                        <i class="fas fa-basketball-ball"></i>
+                        <h3>LeStudy</h3>
+                        <p>LeBron-inspired website to help students study, featuring a pomodoro timer, flashcards, and task/time management, all with LeBron-style gimmicks and motivational elements.</p>
+                    </div>
+                    <div class="skill-card">
+                        <i class="fas fa-chart-bar"></i>
+                        <h3>Study on Degree vs Employment</h3>
+                        <p>Statistics project investigating the impact of degree choices on employment outcomes in Singapore using statistical methods like ANOVA, chi-square tests, and regression analysis.</p>
+                    </div>
+                    <div class="skill-card">
                         <i class="fas fa-utensils"></i>
                         <h3>i-Makan App</h3>
                         <p>Mobile application developed for Lions Befrienders organisation to recommend and organise healthy meal plans for elderly based on their age, specific needs, and chronic diseases.</p>
